修复一些BUG并增加了辅助类

--- a/css/lutachu.styl
+++ b/css/lutachu.styl
@@ -3,7 +3,7 @@
 // Freamework's Boostrap                        ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-18 22:10  ||
-// Last Update: 2015-02-19 19:41 @ Rakume       ||
+// Last Update: 2015-02-19 20:32 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
@@ -17,7 +17,7 @@
 /* Font */
 @import "fonts/foundation";
 
-/* Utilities */
-@import "utilities/base"
-@import "utilities/typography";
-@import "utilities/grid";
+/* Layout */
+@import "layout/base"; // Utillyties
+@import "layout/typography";
+@import "layout/grid";
