修正注释中的时间 增加table元素

--- a/css/lutachu.styl
+++ b/css/lutachu.styl
@@ -3,7 +3,7 @@
 // Freamework's Boostrap                        ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-18 22:10  ||
-// Last Update: 2015-02-19 20:32 @ Rakume       ||
+// Last Update: 2015-02-19 20:45 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
@@ -21,3 +21,6 @@
 @import "layout/base"; // Utillyties
 @import "layout/typography";
 @import "layout/grid";
+
+/* Elements */
+@import "elements/table";
