--- a/css/libraries/normalize.styl
+++ b/css/libraries/normalize.styl
@@ -3,7 +3,7 @@
 // Based On Normalize.css                       ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-18 22:18  ||
-// Last Update: 2015-02-19 19:44 @ Rakume       ||
+// Last Update: 2015-02-19 21:28 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
@@ -408,10 +408,15 @@ optgroup
 table
   border-collapse collapse
   border-spacing 0
+  max-width 100%
+  empty-cells show
 
 td,
 th
   padding 0
+
+th
+  text-align left
 
 // del style
 
