--- a/css/variables.styl
+++ b/css/variables.styl
@@ -3,7 +3,7 @@
 // Framework's Variables                        ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-18 22:12  ||
-// Last Update: 2015-02-19 19:36 @ Rakume       ||
+// Last Update: 2015-02-19 21:28 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
@@ -28,14 +28,18 @@ color-font-blockquote = #666664
 color-font-mark       = color-font
 color-font-blockquote-small = #999
 
-// background
+// Background
 color-background-pre  = #F8F8F8
 color-background-code = #F9F9F7
-color-background-th   = #F4F4F4
 color-background-mark = #FFA
 
+// Table Background
+color-background-th      = #EEE
+color-background-th-mark = #FFA
+color-background-th-odd  = #F4F4F4
+
 // Border
-color-border      = #EAEAEA
+color-border      = #E2E2E2
 color-border-dark = #BBB
 
 /* Width */
