--- a/css/lutachu.styl
+++ b/css/lutachu.styl
@@ -3,7 +3,7 @@
 // Freamework's Boostrap                        ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-18 22:10  ||
-// Last Update: 2015-02-19 20:45 @ Rakume       ||
+// Last Update: 2015-02-19 21:44 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
@@ -24,3 +24,4 @@
 
 /* Elements */
 @import "elements/table";
+@import "elements/code";
