修增加对box-shadow支持并且修复几处小细节

--- a/css/mixins.styl
+++ b/css/mixins.styl
@@ -1,3 +1,12 @@
+// ===============================================
+// Lutachu CSS / Mixins.styl                    ||
+// Framework's Mixins                           ||
+// =============================================||
+// Made by Rakume<i@fake.moe> 2015-02-19 22:02  ||
+// Last Update: 2015-02-19 22:02 @ Rakume       ||
+// MIT License                                  ||
+// ===============================================
+
 // Box Model
 // -----------------------------------------------------------------------------
 
@@ -62,3 +71,13 @@ transform()
 
 animation()
   vendor('animation', arguments)
+
+// Transition
+
+transition()
+  vendor('transition', arguments)
+
+// Box-Shadow
+
+box-shadow()
+  vendor('box-shadow', arguments)
