--- a/css/variables.styl
+++ b/css/variables.styl
@@ -3,7 +3,7 @@
 // Framework's Variables                        ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-18 22:12  ||
-// Last Update: 2015-02-19 22:38 @ Rakume       ||
+// Last Update: 2015-02-19 22:49 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
@@ -38,9 +38,14 @@ color-background-code = #F9F9F7
 color-background-mark = #FFA
 
 // Button
-color-background-btn           = #E6E6E6
+color-background-btn           = #EFEFEF
 color-background-btn-primary   = #0078E7
 color-background-btn-secondary = #42B8DD
+color-background-btn-success   = #1CB841
+color-background-btn-error     = #CA3C3C
+color-background-btn-warning   = #DF7514
+
+
 // Border
 color-border      = #E2E2E2
 color-border-dark = darken(color-border, 2)
