--- a/css/layout/base.styl
+++ b/css/layout/base.styl
@@ -112,3 +112,12 @@
 .{ns}align-right
   float right
   margin-left .5em
+
+// Key Board Log
+kbd
+  padding 2px 4px
+  font-size 90%
+  color #fff
+  background-color #333
+  border-radius 3px
+  box-shadow inset 0 -1px 0 rgba(0, 0, 0, .25)
