更新table划过颜色

--- a/css/variables.styl
+++ b/css/variables.styl
@@ -51,9 +51,9 @@ color-border      = #E2E2E2
 color-border-dark = darken(color-border, 2)
 
 // Table Background
-color-background-th      = darken(color-border, .5)
+color-background-th      = darken(color-border, .05)
 color-background-th-mark = #FFA
-color-background-th-odd  = lighten(color-background-th, 7)
+color-background-th-odd  = lighten(color-border, 7)
 
 /* Width */
 width-border = 2px
