更Grid的一点改进

--- a/css/layout/grid.styl
+++ b/css/layout/grid.styl
@@ -31,3 +31,9 @@ for f in 1..gridMaxColumn
   .{ns}avg-{f}
     > li
       width (1/f) * 100 + '%'
+
+@media (max-width: 700px)
+  [class*={ns}unit-]
+    display block
+    float none
+    width auto
