更Butt更新字体号

--- a/css/layout/grid.styl
+++ b/css/layout/grid.styl
@@ -24,8 +24,13 @@
 
 for f in 1..gridMaxColumn
   for n in 1..f
-    .{ns}unit-{n}-{f}
-      width (n/f) * 100 + '%'
+    if f == gridMaxColumn
+      .{ns}unit-{n}-{f},
+      .{ns}unit-{n}
+        width (n/f) * 100 + '%'
+    else
+      .{ns}unit-{n}-{f}
+        width (n/f) * 100 + '%'
 
   // AVG Grid
   .{ns}avg-{f}
