整体更新：移除namespace，变量重构

--- a/css/elements/code.styl
+++ b/css/elements/code.styl
@@ -3,7 +3,7 @@
 // Code Block                                   ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-19 21:44  ||
-// Last Update: 2015-02-19 21:55 @ Rakume       ||
+// Last Update: 2015-02-20 15:25 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
@@ -14,8 +14,8 @@ code
   padding .1em .3em
   border-radius 3px
   word-break break-all
-  color color-font-code
-  background color-background-code
+  color color-code
+  background background-code
   border 1px solid color-border
 
 pre
@@ -25,8 +25,8 @@ pre
   font-size .9em
   line-height 1.5
   padding .5em .8em
-  color color-font-pre
-  background color-background-pre
+  color color-pre
+  background background-pre
   border-left width-border solid color-border
   
   code,
@@ -35,23 +35,23 @@ pre
     border none
     font-size 1em
     background none
-    color color-font-pre
+    color color-pre
 
 blockquote
   padding-left 1.3em
   margin 0 0 1.6em 0
   font-size .9em
   line-height 1.62
-  color color-font-blockquote
+  color color-blockquote
   border-left width-border solid color-border
   
   small
-    color color-font-blockquote-small
+    color color-blockquote-small
     display block
     text-align right
 
   a
-    color color-font-blockquote
+    color color-blockquote
 
   p
     margin-bottom .5em
