--- a/css/libraries/normalize.styl
+++ b/css/libraries/normalize.styl
@@ -3,7 +3,7 @@
 // Based On Normalize.css                       ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-18 22:18  ||
-// Last Update: 2015-02-19 21:28 @ Rakume       ||
+// Last Update: 2015-02-20 15:22 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
@@ -97,7 +97,7 @@ template
 //
 
 a
-  color color-font-link
+  color color-link
   background-color transparent
 
   &:hover,
@@ -155,8 +155,8 @@ h1
 
 mark,
 ins
-  color: color-font-mark
-  background: color-background-mark
+  color: color-mark
+  background: background-mark
 
 //
 // Address inconsistent and variable font size in all browsers.
