--- a/css/elements/button.styl
+++ b/css/elements/button.styl
@@ -3,11 +3,11 @@
 // Button Style                                 ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-19 21:55  ||
-// Last Update: 2015-02-20 11:22 @ Rakume       ||
+// Last Update: 2015-02-20 15:24 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
-.{ns}btn
+.btn
   border 0
   outline 0
   border 0
@@ -16,67 +16,67 @@
   text-align center
   padding .35em 1.2em
   text-decoration none
-  color color-font-btn
+  color color-btn
   display inline-block
   vertical-align middle
-  background-color color-background-btn
+  background-color background-btn
   background-image none
   transition box-shadow .2s linear
 
-  [class*={ns}icon-]:before
+  [class*=icon-]:before
     transform scale(1.2)
 
   &:hover
     box-shadow 1px 1px 3px rgba(0, 0, 0, .2)
 
-  &.{ns}btn-active,
+  &.btn-active,
   &:active
     box-shadow 1px 1px 3px rgba(0, 0, 0, .4)
 
-  &.{ns}btn-default,
-  &.{ns}btn-primary,
-  &.{ns}btn-secondary,
-  &.{ns}btn-success,
-  &.{ns}btn-warning,
-  &.{ns}btn-error
+  &.btn-default,
+  &.btn-primary,
+  &.btn-secondary,
+  &.btn-success,
+  &.btn-warning,
+  &.btn-error
     color #fff
 
-    [class*={ns}icon-]:before
+    [class*=icon-]:before
       color #fff
 
     &:hover
       box-shadow inset 0 0 6px 2px rgba(0, 0, 0, .24), 1px 1px 3px rgba(0, 0, 0, .2)
 
-    &.{ns}btn-active,
+    &.btn-active,
     &:active
       box-shadow inset 0 0 8px 1px rgba(15, 15, 15, .34), 1px 1px 5px rgba(0, 0, 0, .4)
 
-  &.{ns}btn-default
-    background-color color-background-btn-default
+  &.btn-default
+    background-color background-btn-default
 
     &:hover
       box-shadow inset 0 0 8px 3px rgba(255, 255, 255, .2), 1px 1px 3px rgba(0, 0, 0, .2)
 
-    &.{ns}btn-active,
+    &.btn-active,
     &:active
       box-shadow inset 0 0 8px 1px rgba(255, 255, 255, .2), 1px 1px 5px rgba(0, 0, 0, .4)
 
-  &.{ns}btn-primary
-    background-color color-background-btn-primary
+  &.btn-primary
+    background-color background-btn-primary
 
-  &.{ns}btn-secondary
-    background-color color-background-btn-secondary
+  &.btn-secondary
+    background-color background-btn-secondary
 
-  &.{ns}btn-success
-    background-color color-background-btn-success
+  &.btn-success
+    background-color background-btn-success
 
-  &.{ns}btn-error
-    background-color color-background-btn-error
+  &.btn-error
+    background-color background-btn-error
 
-  &.{ns}btn-warning
-    background-color color-background-btn-warning
+  &.btn-warning
+    background-color background-btn-warning
 
-  &.{ns}btn-disabled,
+  &.btn-disabled,
   &[disabled]
     &,
     &:hover,
@@ -86,20 +86,20 @@
       box-shadow none
       cursor not-allowed
 
-  &.{ns}btn-radius
+  &.btn-radius
     border-radius 3px
 
-  &.{ns}btn-round
+  &.btn-round
     border-radius 100000px
 
-  &.{ns}btn-xl
+  &.btn-xl
     font-size 1.4rem
 
-  &.{ns}btn-lg
+  &.btn-lg
     font-size 1.2rem
 
-  &.{ns}btn-sm
+  &.btn-sm
     font-size .8rem
    
-  &.{ns}btn-xs
+  &.btn-xs
     font-size .6rem
