--- a/css/layout/base.styl
+++ b/css/layout/base.styl
@@ -3,121 +3,125 @@
 // Some Utillyties                              ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-19 17:48  ||
-// Last Update: 2015-02-19 23:23 @ Rakume       ||
+// Last Update: 2015-02-20 15:06 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
+/* Position */
+
+.absolute
+  position absolute
+
+.relative
+  position relative
+
+.fixed
+  position fixed
+
 /* Border Radius */
 
-.{ns}squre
+.squre
   border-radius 0
 
-.{ns}circle
+.circle
   border-radius 50%
 
 /* Float */
 
-.{ns}fl
+.left
   float left
 
-.{ns}fr
+.right
   float right
 
-.{ns}ofh
-  overflow hidden
+.clearfix
+  clearfix()
 
 /* Text & Block */
 
-.{ns}center
+.center
   center()
 
 /* Display */
 
-.{ns}block
+.block
   display block !important
 
-.{ns}inline
+.inline
   display inline !important
 
-.{ns}inline-block
+.inline-block
   display inline-block !important
 
-.{ns}hide
+.hide
   display none !important
   visibility hidden !important
 
 /* Text */
 
+.overhide
+  overflow hidden
+
 // Font-family
 
-.{ns}serif
+.serif
   font-family font-family-serif
 
-.{ns}kai
+.kai
   font-family font-family-kai
 
-.{ns}monospace
+.monospace
   font-family font-family-monospace
-
 
 // Align
 
-.{ns}text-left
+.text-left
   text-align left!important
 
-.{ns}text-right
+.text-right
   text-align right!important
 
-.{ns}text-center
+.text-center
   text-align center!important
 
 // Vertical Align
 
-.{ns}text-top
+.text-top
   vertical-align: top!important;
 
-.{ns}text-middle
+.text-middle
   vertical-align: middle!important;
 
-.{ns}text-bottom
+.text-bottom
   vertical-align: bottom!important;
 
-// Text Truncate
+// Text 
 
-.{ns}text-truncate
+.text-truncate
   word-wrap normal /* for IE */
   text-overflow ellipsis
   white-space nowrap
   overflow hidden
   
-.{ns}text-norwap
+.text-norwap
   word-wrap normal /* for IE */
   white-space nowrap
   overflow hidden
 
-.{ns}text-break
+.text-break
   word-wrap break-word
   word-break break-all
 
 // Align
 
-.{ns}align-right,
-.{ns}align-left
+.align-right,
+.align-left
   display inline
 
-.{ns}align-left
+.align-left
   float left
   margin-right .5em
 
-.{ns}align-right
+.align-right
   float right
   margin-left .5em
-
-// Key Board Log
-kbd
-  padding 2px 4px
-  font-size 90%
-  color #fff
-  background-color #333
-  border-radius 3px
-  box-shadow inset 0 -1px 0 rgba(0, 0, 0, .25)
