--- a/css/variables.styl
+++ b/css/variables.styl
@@ -3,11 +3,9 @@
 // Framework's Variables                        ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-18 22:12  ||
-// Last Update: 2015-02-20 11:40 @ Rakume       ||
+// Last Update: 2015-02-20 15:27 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
-
-ns = 'lu-'
 
 /* Typography */
 font-size   = 16px
@@ -17,46 +15,49 @@ font-family-kai       = Georgia, "Times New Roman", Times, Kai, "Kaiti SC", KaiT
 font-family-monospace = "Source Code Pro", Monaco, Menlo, Consolas, "Courier New", monospace
 
 /* Color */
+color-normal = #222223
+color-grey   = #999
+color-border = #ddd
 
-// Font
-color-font            = #222223
-color-font-link       = #555
-color-font-link-hover = color-font
-color-font-code       = #808080
-color-font-pre        = #4C4C4C
-color-font-blockquote = #666664
-color-font-mark       = color-font
-color-font-blockquote-small = #999
+color-link   = #555555
+color-code   = #808080
+color-pre    = #4C4C4C
+color-bquote = #666664
+color-btn    = #444444
+color-mark   = color-normal
 
-// Button
-color-font-btn = #444
-color-font-btn-primary = #FFF
+color-btn-primary  = #FFF
+color-link-hover   = color-normal
+color-bquote-small = #999
+color-border-dark  = darken(color-border, 2)
+
+background-mark = #FFA
 
 // Background
-color-background-pre  = #F8F8F8
-color-background-code = #F9F9F7
-color-background-mark = #FFA
+background-pre  = #F8F8F8
+background-code = #F9F9F7
 
-// Button
-color-background-btn           = #EFEFEF
-color-background-btn-default   = #4A4D50
-color-background-btn-primary   = #0078E7
-color-background-btn-secondary = #42B8DD
-color-background-btn-success   = #1CB841
-color-background-btn-error     = #CA3C3C
-color-background-btn-warning   = #DF7514
-
-// Border
-color-border      = #E2E2E2
-color-border-dark = darken(color-border, 2)
+// Btn Background
+background-btn           = #EFEFEF
+background-btn-default   = #4A4D50
+background-btn-primary   = #0078E7
+background-btn-secondary = #42B8DD
+background-btn-success   = #1CB841
+background-btn-error     = #CA3C3C
+background-btn-warning   = #DF7514
 
 // Table Background
-color-background-th      = darken(color-border, .05)
-color-background-th-mark = #FFA
-color-background-th-odd  = lighten(color-border, 7)
+background-th      = darken(color-border, .05)
+background-th-mark = #FFA
+background-th-odd  = lighten(color-border, 7)
 
 /* Width */
 width-border = 2px
 
 /* Grid */
 gridMaxColumn = 12
+
+// Media queries
+mq-mobile = "screen and (max-width: 479px)"
+mq-tablet = "screen and (min-width: 480px) and (max-width: 767px)"
+mq-normal = "screen and (min-width: 768px)"
