--- a/css/layout/base.styl
+++ b/css/layout/base.styl
@@ -3,11 +3,11 @@
 // Some Utillyties                              ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-19 17:48  ||
-// Last Update: 2015-02-20 15:06 @ Rakume       ||
+// Last Update: 2015-02-20 15:38 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
-/* Position */
+// Position
 
 .absolute
   position absolute
@@ -18,7 +18,7 @@
 .fixed
   position fixed
 
-/* Border Radius */
+// Border Radius
 
 .squre
   border-radius 0
@@ -26,7 +26,7 @@
 .circle
   border-radius 50%
 
-/* Float */
+// Float
 
 .left
   float left
@@ -37,12 +37,12 @@
 .clearfix
   clearfix()
 
-/* Text & Block */
+// Text & Block
 
 .center
   center()
 
-/* Display */
+// Display
 
 .block
   display block !important
@@ -57,7 +57,7 @@
   display none !important
   visibility hidden !important
 
-/* Text */
+// Text
 
 .overhide
   overflow hidden
@@ -76,26 +76,22 @@
 // Align
 
 .text-left
-  text-align left!important
+  text-align left !important
 
 .text-right
-  text-align right!important
+  text-align right !important
 
 .text-center
-  text-align center!important
-
-// Vertical Align
+  text-align center !important
 
 .text-top
-  vertical-align: top!important;
+  vertical-align top !important
 
 .text-middle
-  vertical-align: middle!important;
+  vertical-align middle !important
 
 .text-bottom
-  vertical-align: bottom!important;
-
-// Text 
+  vertical-align bottom !important
 
 .text-truncate
   word-wrap normal /* for IE */
