新增Material系颜色

--- a/css/variables.styl
+++ b/css/variables.styl
@@ -3,7 +3,7 @@
 // Framework's Variables                        ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-18 22:12  ||
-// Last Update: 2015-02-20 15:27 @ Rakume       ||
+// Last Update: 2015-02-20 15:58 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
@@ -15,8 +15,31 @@ font-family-kai       = Georgia, "Times New Roman", Times, Kai, "Kaiti SC", KaiT
 font-family-monospace = "Source Code Pro", Monaco, Menlo, Consolas, "Courier New", monospace
 
 /* Color */
+// Colors From Material Design
+color-red    = #F44336
+color-green  = #E91E63
+color-purple = #9C27B0
+color-indigo = #3F51B5
+color-blue   = #2196F3
+color-cyan   = #00BCD4
+color-teal   = #009688
+color-green  = #4CAF50
+color-lime   = #CDDC39
+color-yellow = #FFEB38
+color-amber  = #FFC107
+color-orange = #FF9800
+color-brown  = #795548
+color-grey   = #9E9E9E
+color-black  = #000000
+color-white  = #FFFFFF
+
+color-blue-grey   = #707D8B
+color-light-blue  = #03A9F4
+color-deep-purple = #673AB7
+color-light-green = #8BC34A
+color-deep-orange = #FF5722
+
 color-normal = #222223
-color-grey   = #999
 color-border = #ddd
 
 color-link   = #555555
@@ -36,15 +59,6 @@ background-mark = #FFA
 // Background
 background-pre  = #F8F8F8
 background-code = #F9F9F7
-
-// Btn Background
-background-btn           = #EFEFEF
-background-btn-default   = #4A4D50
-background-btn-primary   = #0078E7
-background-btn-secondary = #42B8DD
-background-btn-success   = #1CB841
-background-btn-error     = #CA3C3C
-background-btn-warning   = #DF7514
 
 // Table Background
 background-th      = darken(color-border, .05)
