--- a/css/lutachu.styl
+++ b/css/lutachu.styl
@@ -3,7 +3,7 @@
 // Freamework's Boostrap                        ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-18 22:10  ||
-// Last Update: 2015-02-20 15:06 @ Rakume       ||
+// Last Update: 2015-02-20 15:53 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
@@ -26,3 +26,4 @@
 @import "elements/table";
 @import "elements/code";
 @import "elements/button";
+@import "elements/form";
