排版小修改

--- a/css/layout/typography.styl
+++ b/css/layout/typography.styl
@@ -101,7 +101,7 @@ p
   margin-bottom 1.46em
   letter-spacing .2px
 
-.indent p:before
+.text-indent p:before
   content '\3000\3000'
   display inline
 
