排版小修改

--- a/css/layout/typography.styl
+++ b/css/layout/typography.styl
@@ -101,6 +101,14 @@ p
   margin-bottom 1.46em
   letter-spacing .2px
 
+  &.text-author
+    display block
+    text-align right
+    font-weight 800
+
+    &:before
+      content '——' !important
+
 .text-indent p:before
   content '\3000\3000'
   display inline
