一些小修改，增加Form元素

--- a/css/elements/button.styl
+++ b/css/elements/button.styl
@@ -43,6 +43,7 @@ btn-bgcolor(n, l = 6, d = 4)
   padding .35em 1.2em
   text-decoration none
   color color-btn
+  line-height 1.5em
   display inline-block
   vertical-align middle
   btn-bgcolor lighten(color-grey, 22)
@@ -91,3 +92,7 @@ btn-bgcolor(n, l = 6, d = 4)
 
   &.btn-xs
     font-size .6rem
+
+  &.btn-full
+    width 100%
+    padding .5em 0
