--- a/css/layout/typography.styl
+++ b/css/layout/typography.styl
@@ -267,8 +267,7 @@ h6
   h6,
   .poem-title
     margin 0
-    font-size 1.6em
-    //margin-left -.5em
+    margin-left -.5em
  
     &:before
       content none
@@ -277,7 +276,7 @@ h6
       font-size .6em
 
   p
-    margin 0 -1.4em
+    margin 0 -1em
     text-align left
     max-height 600px
     letter-spacing inherit
