修防止textarea的大小超过父级

--- a/css/elements/form.styl
+++ b/css/elements/form.styl
@@ -26,6 +26,7 @@ textarea
   width 100%
   outline none
   display block
+  max-width 100%
   background #fff
   padding .5em .8em
   margin-bottom .75em
