--- a/css/lutachu.styl
+++ b/css/lutachu.styl
@@ -3,7 +3,7 @@
 // Freamework's Boostrap                        ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-18 22:10  ||
-// Last Update: 2015-02-20 15:53 @ Rakume       ||
+// Last Update: 2015-02-21 17:50 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
@@ -27,3 +27,6 @@
 @import "elements/code";
 @import "elements/button";
 @import "elements/form";
+
+/* Components */
+@import "components/poem";
