增加颜色 color-Utility

--- a/css/layout/base.styl
+++ b/css/layout/base.styl
@@ -135,3 +135,59 @@
 
 .max-full
   max-width 100%
+
+// Color
+
+for a in 1..2
+  if a == 1
+    a = 'background'
+  else
+    a = 'color'
+
+  .{a}-red
+    {a}: color-red
+
+  .{a}-green
+    {a}: color-green
+
+  .{a}-purple
+    {a}: color-purple
+
+  .{a}-indigo
+    {a}: color-indigo
+
+  .{a}-blue
+    {a}: color-blue
+
+  .{a}-cyan
+    {a}: color-cyan
+
+  .{a}-teal
+    {a}: color-teal
+
+  .{a}-green
+    {a}: color-green
+
+  .{a}-lime
+    {a}: color-lime
+
+  .{a}-yellow
+    {a}: color-yellow
+
+  .{a}-amber
+    {a}: color-amber
+
+  .{a}-orange
+    {a}: color-orange
+
+  .{a}-brown
+    {a}: color-brown
+
+  .{a}-grey
+    {a}: color-grey
+
+  .{a}-black
+    {a}: color-black
+
+  .{a}-white
+    {a}: color-white
