--- a/css/elements/form.styl
+++ b/css/elements/form.styl
@@ -3,7 +3,7 @@
 // Form                                         ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-20 16:53  ||
-// Last Update: 2015-02-20 16:53 @ Rakume       ||
+// Last Update: 2015-02-21 19:27 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
@@ -41,7 +41,7 @@ textarea
 
   &:active,
   &:focus
-    border-color color-blue
+    border-color color['blue']
 
 label,
 option
@@ -79,7 +79,7 @@ label
     &:focus
       position relative
       margin-bottom -1px
-      border-bottom 1px solid color-blue
+      border-bottom 1px solid color['blue']
 
     &:last-child
       border-bottom 1px solid color-border
@@ -87,7 +87,7 @@ label
       &:active,
       &:focus
         margin-bottom 0
-        border-bottom-color color-blue
+        border-bottom-color color['blue']
 
   &.radius
 
