--- a/css/variables.styl
+++ b/css/variables.styl
@@ -3,7 +3,7 @@
 // Framework's Variables                        ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-18 22:12  ||
-// Last Update: 2015-02-20 15:58 @ Rakume       ||
+// Last Update: 2015-02-20 19:27 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
@@ -16,28 +16,30 @@ font-family-monospace = "Source Code Pro", Monaco, Menlo, Consolas, "Courier New
 
 /* Color */
 // Colors From Material Design
-color-red    = #F44336
-color-green  = #E91E63
-color-purple = #9C27B0
-color-indigo = #3F51B5
-color-blue   = #2196F3
-color-cyan   = #00BCD4
-color-teal   = #009688
-color-green  = #4CAF50
-color-lime   = #CDDC39
-color-yellow = #FFEB38
-color-amber  = #FFC107
-color-orange = #FF9800
-color-brown  = #795548
-color-grey   = #9E9E9E
-color-black  = #000000
-color-white  = #FFFFFF
+color = {
+  red:    #F44336
+  green:  #E91E63
+  purple: #9C27B0
+  indigo: #3F51B5
+  blue:   #2196F3
+  cyan:   #00BCD4
+  teal:   #009688
+  green:  #4CAF50
+  lime:   #CDDC39
+  yellow: #FFEB38
+  amber:  #FFC107
+  orange: #FF9800
+  brown:  #795548
+  grey:   #9E9E9E
+  black:  #000000
+  white:  #FFFFFF
 
-color-blue-grey   = #707D8B
-color-light-blue  = #03A9F4
-color-deep-purple = #673AB7
-color-light-green = #8BC34A
-color-deep-orange = #FF5722
+  blue-grey:   #707D8B
+  light-blue:  #03A9F4
+  deep-purple: #673AB7
+  light-green: #8BC34A
+  deep-orange: #FF5722
+}
 
 color-normal = #222223
 color-border = #ddd
