修改Card组件的小细节

--- a/css/components/card.styl
+++ b/css/components/card.styl
@@ -14,9 +14,10 @@
   border-radius 3px
   position relative
   padding-bottom 50px
-  box-shadow 0 1px 5px 1px rgba(0, 0, 0, .26)
+  box-shadow 0 1px 3px 1px rgba(0, 0, 0, .26)
 
   .card-rich
+    margin 0 -1px
     min-height 50px
     position relative
 
