--- a/css/lutachu.styl
+++ b/css/lutachu.styl
@@ -3,7 +3,7 @@
 // Freamework's Boostrap                        ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-18 22:10  ||
-// Last Update: 2015-02-21 19:27 @ Rakume       ||
+// Last Update: 2015-02-22 20:05 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
@@ -31,6 +31,7 @@
 @import "components/acomment";
 @import "components/card";
 @import "components/poem";
+@import "components/msg";
 
 // Utillyties
 @import "layout/utillyties";
