--- a/css/fonts/foundation.styl
+++ b/css/fonts/foundation.styl
@@ -13,7 +13,8 @@
  * MIT License
  */
 
-fi-path = "//dn-staticfile.qbox.me/foundicons/3.0.0/"
+// fi-path = "//dn-staticfile.qbox.me/foundicons/3.0.0/"
+fi-path = "./fonts/"
 fi-prefix = "icon-"
 fi-version = "3.0.0"
 
