修复幽灵按钮BUG

--- a/css/elements/button.styl
+++ b/css/elements/button.styl
@@ -83,12 +83,14 @@ btn-bgcolor(n, l = 6, d = 4)
 
   &.btn-ghost
     border 1px solid
-    background-color trasparent
+    background-color transparent
 
     &:hover
+      border 1px solid
       background-color rgba(255, 255, 255, .2)
 
     &:active
+      border 1px solid
       background-color rgba(255, 255, 255, .4)
 
   &.btn-xl
