修复幽灵按钮BUG

--- a/css/elements/button.styl
+++ b/css/elements/button.styl
@@ -86,10 +86,12 @@ btn-bgcolor(n, l = 6, d = 4)
     background-color transparent
 
     &:hover
+      color inherit
       border 1px solid
       background-color rgba(255, 255, 255, .2)
 
     &:active
+      color inherit
       border 1px solid
       background-color rgba(255, 255, 255, .4)
 
