--- a/css/layout/utillyties.styl
+++ b/css/layout/utillyties.styl
@@ -3,7 +3,7 @@
 // Some Utillyties                              ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-19 17:48  ||
-// Last Update: 2015-02-21 18:45 @ Rakume       ||
+// Last Update: 2015-03-08 12:00 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
@@ -139,6 +139,7 @@
 .container
   max-width 90%
   center()
+  clearfix()
 
 // Color
 
