--- a/css/elements/button.styl
+++ b/css/elements/button.styl
@@ -95,6 +95,9 @@ btn-bgcolor(n, l = 6, d = 4)
       border 1px solid
       background-color rgba(255, 255, 255, .4)
 
+    &:visited
+      color inherit
+
   &.btn-xl
     font-size 1.4rem
 
