--- a/css/layout/grid.styl
+++ b/css/layout/grid.styl
@@ -3,7 +3,7 @@
 // 1~12 Rows Grid System                        ||
 // =============================================||
 // Made by Rakume<i@fake.moe> 2015-02-19 19:36  ||
-// Last Update: 2015-03-08 13:22 @ Rakume       ||
+// Last Update: 2015-03-08 13:48 @ Rakume       ||
 // MIT License                                  ||
 // ===============================================
 
@@ -20,18 +20,11 @@
   padding 0 1em
   display inline
 
-for f in 1..gridMaxColumn
-  for n in 1..f
-    if f == gridMaxColumn
-      .grid-u-{n}-{f},
-      .grid-u-{n}
-        width (n/f) * 100 + '%'
+for n in 1..12
+  if f == 12
+    .grid-u-{n}
+      width (n/f) * 100 + '%'
 
-    else
-      .grid-u-{n}-{f}
-        width (n/f) * 100 + '%'
-
-    .grid-ml-{n}-{f},
     .grid-ml-{n}
       margin-left (n/f) * 100 + '%'
 
@@ -40,7 +33,7 @@ for f in 1..gridMaxColumn
     > li
       width (1/f) * 100 + '%'
 
-@media (max-width: 700px)
+@media (max-width: 767px)
   [class*=grid-u-]
     display block
     float none
